<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ink_primary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/viewer_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/gallery_title"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/viewer_actions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/viewer_actions"
        android:layout_width="@dimen/end_column_width"
        android:layout_height="0dp"
        android:background="#1AFFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/viewer_title"
            style="@style/Text.Section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            tools:text="اتاق خواب پشمک" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/viewer_export"
            style="@style/Button.Chunky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_green"
            android:text="@string/gallery_export"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/viewer_share"
            style="@style/Button.Chunky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_blue"
            android:text="@string/gallery_share"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/viewer_delete"
            style="@style/Button.Chunky"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_red"
            android:text="@string/gallery_delete"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/viewer_close"
            style="@style/Button.Pill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_circle_lock"
            android:text="@string/back"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
